@@ -5,21 +5,23 @@ import lombok.Setter;
 import org.springframework.stereotype.Component;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.List;
 
 @Getter
 @Setter
 @Component
 public class Garage {
-    private List<Car> cars;
+    private List<Car> cars = new ArrayList<>();
 
-    public void fill() {
+    public Garage() {
         Car car1 = new Car();
 
         car1.setBrand("Mercedes-Benz");
         car1.setModel("Maybach S680");
         car1.setYear(2025);
         car1.setRun(20);
+        car1.setPrice(999);
 
         Car car2 = new Car();
 
@@ -27,6 +29,7 @@ public class Garage {
         car2.setModel("Urus SE");
         car2.setYear(2025);
         car2.setRun(1120);
+        car2.setPrice(599);
 
         Car car3 = new Car();
 
@@ -34,13 +37,26 @@ public class Garage {
         car3.setModel("Escalade");
         car3.setYear(2023);
         car3.setRun(2479);
+        car3.setPrice(299);
 
-
-        cars = List.of(car1, car2, car3);
+        cars.addAll(Arrays.asList(car1,car2,car3));
     }
 
     public void addCar(Car car) {
         cars.add(car);
+    }
+
+    public void removeCar(Car car) {
+        for (int i = 0; i < cars.size(); i++) {
+            Car value = cars.get(i);
+            if (car.getBrand().equals(value.getBrand()) &&
+                    car.getModel().equals(value.getModel()) &&
+                    car.getYear() == value.getYear() &&
+                    car.getRun() == value.getRun()) {
+                cars.remove(i);
+                break;
+            }
+        }
     }
 
     public boolean findCar(Car car) {
@@ -48,12 +64,13 @@ public class Garage {
         for (Car value : cars) {
             if (car.getBrand().equals(value.getBrand()) &&
                     car.getModel().equals(value.getModel())) {
-                flag=true;
+                flag = true;
                 break;
             }
         }
         return flag;
     }
+
     public Car findCarValue(Car car) {
         boolean flag = false;
         for (Car value : cars) {
@@ -62,7 +79,7 @@ public class Garage {
                 return value;
             }
         }
-        Car empty=new Car();
+        Car empty = new Car();
         empty.setBrand("");
         empty.setModel("");
         empty.setYear(0);
@@ -70,8 +87,8 @@ public class Garage {
         return empty;
     }
 
-    public List<Car> getFoundCars(Car car){
-        List<Car>goodCars=new ArrayList<>();
+    public List<Car> getFoundCars(Car car) {
+        List<Car> goodCars = new ArrayList<>();
         for (Car value : cars) {
             if (car.getBrand().equals(value.getBrand()) &&
                     car.getModel().equals(value.getModel())) {
